# mapqa-ext

./: CLAUDE.md  pyproject.toml
dataset/mapqa/llm/: california_poi.json  illinois_poi.json
dataset/mapqa/retrieval/california/test/: test_socal_dpr_cased_adjacent.json  test_socal_dpr_cased_amenities.json  test_socal_dpr_cased_amenities_around.json  test_socal_dpr_cased_amenities_around_specific.json  test_socal_dpr_cased_compare_closer.json
dataset/mapqa/retrieval/california/train/: train_socal_dpr_cased_amenity.json
dataset/mapqa/retrieval/illinois/test/: test_il_dpr_cased_adjacent.json  test_il_dpr_cased_direction_nearest.json
notebooks/: eda.ipynb
src/pipelines/: poi_lookup.py
src/schema/: schema.py
