[project]
name = "mapqa-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "polars>=1.41.0",
    "pydantic>=2.13.4",
    "shapely>=2.1.2",
    "staticmap3>=0.2.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
